--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.14.3",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "hbs": "^4.1.0",
     "minimist": "^1.2.5",
     "request": "^2.88.2"
