--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,8 @@
     "hbs": "^4.1.0",
     "minimist": "^1.2.5",
     "request": "^2.88.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
   }
 }
